--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,9 @@ sonar.projectVersion=1.0
 sonar.modules=peekDocUserPy,peekDocUserTs
 peekDocUserPy.sonar.projectName=peek-doc-user
 peekDocUserPy.sonar.language=py
+peekDocUserPy.sonar.inclusions=**/*.py
 peekDocUserPy.sonar.projectBaseDir=peek_doc_user
 peekDocUserTs.sonar.projectName=peek-doc-user
 peekDocUserTs.sonar.language=ts
+peekDocUserTs.sonar.inclusions=**/*.ts
 peekDocUserTs.sonar.projectBaseDir=peek_doc_user
